--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!---->
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-prinipal">Ler livros sobre conhecimentos abrangentes</h3>
+                    <h3 class="aba-conteudo-titulo-prinipal">Concluir A Leitura Dos Meus Livros</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <!---->
                     <div class="contador">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-prinipal">Criar um resumo a cada livro lido</h3>
+                    <h3 class="aba-conteudo-titulo-prinipal">Completar O Cursinho</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-prinipal">Criar um portifolio com meus melhores resumos</h3>
+                    <h3 class="aba-conteudo-titulo-prinipal">Fazer Analises De Documentários</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-prinipal">Abranger meus argumentos e conhecimentos</h3>
+                    <h3 class="aba-conteudo-titulo-prinipal">Dedicar Tempo Para Estudos Avançados</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
