--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-prinipal">Dedicar Tempo Para Estudos Avançados</h3>
+                    <h3 class="aba-conteudo-titulo-prinipal">Dedicar Tempo Para Estudos Que Me Interessam</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
