--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!--cONTEUDO PRINCIPAL-->
         <section class="conteudo principal">
-            <h2 class="tiulo-principal">Meus Objetivos do Ano_</h2>
+            <h2 class="tiulo-principal">Meus Objetivos do Ano<span>_</span></h2>
         <div class="div-conteudp">
             <div class="botoes">
                 <button class="botao ativo">Cursos na Alura</button>
@@ -20,7 +20,7 @@
             <!---->
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-prinipal">Concluir A Leitura Dos Meus Livros</h3>
+                    <h3 class="aba-conteudo-titulo-prinipal">Ler livros sobre conhecimentos abrangentes</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <!---->
                     <div class="contador">
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                         <div class="contador">
-                           for(let i=0;i <botoes.length;i++){
+                          <!-- for(let i=0;i <botoes.length;i++){
                                 botoes[i].onclick = function(){
                             
                                     for(let j=0,j<botoes.length;j++){
@@ -45,7 +45,7 @@
                                     botoes[i].classList.add("ativo");
                                     textos[i].classList.add("ativo");
                                 }
-                                console.log()};
+                                console.log()};-->
                             <div class="contador-digito">
                                 <p class="contador-digito-numero" id="min0"></p>
                                 <p class="contador-digito-texto">min</p>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-prinipal">Completar O Cursinho</h3>
+                    <h3 class="aba-conteudo-titulo-prinipal">Criar um resumo a cada livro lido</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-prinipal">Fazer Analises De Documentários</h3>
+                    <h3 class="aba-conteudo-titulo-prinipal">Criar um portifolio com meus melhores resumos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -101,8 +101,9 @@
                                 <p class="contador-digito-texto">horas</p>
                             </div>
                         </div>
+                        <!--
                         <divfor(let i=0;i <botoes.length;i++){
-                            botoes[i].onclick = function(){
+                          </botoes.length>  botoes[i].onclick = function(){
                         
                                 for(let j=0,j<botoes.length;j++){
                                     botoes[j].classList.remove("ativo");
@@ -112,7 +113,7 @@
                                 textos[i].classList.add("ativo");
                             }
                             console.log();
-                        } class="contador">
+                        } class="contador">-->
                             <div class="contador-digito">
                                 <p class="contador-digito-numero" id="min2"></p>
                                 <p class="contador-digito-texto">min</p>
@@ -127,7 +128,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-prinipal">Dedicar Tempo Para Estudos Que Me Interessam</h3>
+                    <h3 class="aba-conteudo-titulo-prinipal">Abranger meus argumentos e conhecimentos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
